Customer module changes